--- a/scripts/python/emf2fasta.pyx.in
+++ b/scripts/python/emf2fasta.pyx.in
@@ -1,5 +1,5 @@
 #    
-# Copyright (C) 2006-2011 Hervé Rouault <rouault@lps.ens.fr>
+# Copyright (C) 2006-2011 Herve Rouault <rouault@lps.ens.fr>
 # Copyright (C) 2009-2011 Marc Santolini <santolin@lps.ens.fr>
 # 
 # This file is part of Imogene.
