--- a/scripts/python/emf2fasta.pyx.in
+++ b/scripts/python/emf2fasta.pyx.in
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 #    
 # Copyright (C) 2006-2011 Herve Rouault <rouault@lps.ens.fr>
 # Copyright (C) 2009-2011 Marc Santolini <santolin@lps.ens.fr>
