--- a/scripts/emf2fasta.pyx.in
+++ b/scripts/emf2fasta.pyx.in
@@ -77,7 +77,7 @@ def emf2fasta(filename):
             while line[0:3] == 'SEQ':
                 coords = line.rstrip().split()
                 species = spe2prop.get(coords[1], ['NA', -1])[0]
-                if coords[1] != 'ancestral_species':
+                if coords[1] != 'ancestral_sequences':
                     header[coords[1]] = {'chrom': coords[2],
                                          'start': int(coords[3]),
                                          'stop': int(coords[4]),
